# role-call

./: README.md  credit.txt
client/: .env  .eslintrc.js  game.html  index.html  package-lock.json  package.json  webpack.config.js
client/src/: api.tsx  game.tsx  index.tsx
client/src/components/: App.tsx  ColourSelector.tsx  CreateGame.tsx  Greeting.tsx  Hello.tsx  HostedGames.tsx  Landing.tsx  LoadDisplay.tsx  Login.tsx
client/src/components/game/: CommsComponent.tsx  Controls.tsx  GameApp.tsx  GameLanding.tsx  GameStage.tsx  MapControls.tsx  ObjControls.tsx  ObjManager.ts  ObjManager.tsx  ObjThumbnail.tsx  PopupButton.ts  TokenControls.tsx  TokenLayer.tsx  TokenManager.ts  TokenManager.tsx
client/src/components/game/util/: TokenFactory.tsx
client/src/css/: App.css  index.css
client/src/models/: Game.tsx  GameMap.ts  GameObj.ts  User.tsx
server/: .env  Cargo.toml  Rocket.toml  install.sh
server/src/: api.rs  config.rs  db.rs  game.rs  lib.rs  main.rs  web.rs
server/src/game/: conn.rs  mod.rs  protocol.rs  server.rs  state.rs
server/tests/: api_test.rs
