[package]
name = "rolecall"
version = "0.1.0"
authors = ["Eleanor McMurtry <elmcmurtry1@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5.4"
futures = "0.3.5"
argonautica = "0.2.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" , default-features = false, features = ["json", "serve"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
dotenv = "0.15.0"
rand = "0.7.3"
tokio-tungstenite = "0.10.1"
lazy_static = "1.4.0"
flurry = "0.3.0"
simple_logger = "1.6.0"
log = "0.4.8"
base64 = "0.12.3"
rocket-multipart-form-data = { git = "https://github.com/impero-com/rocket-multipart-form-data", branch = "rocket-0.5" }
uuid = { version = "0.8", features = ["serde", "v4"] }
[dev-dependencies]
reqwest = { version = "0.10.6", features = ["json"] }
serial_test = "0.4.0"
